# Muorg

./: .gitignore  README.md  agent.md  index.html  package.json  plan.md  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: build.yml  mac-signed-release.yml  release.yml
scripts/: build-with-updater.sh  release.sh
src/: App.vue  main.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/catalog/: db.rs  mod.rs
src-tauri/src/metadata/: mod.rs  read_write.rs
src/components/: LibraryTable.vue  MetadataEditor.vue  PlayerBar.vue  Sidebar.vue  TrackAlbumArt.vue
src/stores/: catalog.ts  settings.ts
src/utils/: pathFormat.ts
