[package]
name = "muorg"
version = "0.1.8"
description = "The Music Organizer from Hell"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
lofty = "0.19"
walkdir = "2"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
