[package]
name = "muorg"
version = "0.3.6"
description = "The Music Organizer from Hell"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
lofty = "0.19"
walkdir = "2"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
